--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -15,9 +15,7 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:cm="http://schemas.android.com/apk/res/cyanogenmod.platform"
-        android:key="button_settings"
-        android:title="@string/button_pref_title">
+        xmlns:cm="http://schemas.android.com/apk/res/cyanogenmod.platform">
 
     <SwitchPreference
         android:key="disable_nav_keys"
