--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -16,9 +16,7 @@
 -->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:lineage="http://schemas.android.com/apk/res/cyanogenmod.platform"
-    android:key="status_bar_settings"
-    android:title="@string/status_bar_title">
+    xmlns:lineage="http://schemas.android.com/apk/res/cyanogenmod.platform">
 
     <cyanogenmod.preference.CMSystemSettingListPreference
         android:key="qs_quick_pulldown"
